@@ -1,3 +1,8 @@
+2002-04-23  Jody Goldberg <jody@gnome.org>
+
+	* gnome-settings-accessibility-keyboard.c (get_xkb_desc_rec) :
+	  suppress warning.
+
 2002-04-17  Rachel Hestilow  <hestilow@ximian.com>
 
 	* GNOME_SettingsDaemon.server.in: s/gnome2/gnome
